Fix footer alignment issue

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   height: 100vh;
+  overflow: hidden;
   background-color: #E5EAFA;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
